--- a/src/index.sass
+++ b/src/index.sass
@@ -34,16 +34,16 @@ html,body
     height: 100%
 /*General styles
 a:hover, a:focus, a:active
-  text-decoration: none
-  color: inherit
-  outline: none    
+    text-decoration: none
+    color: inherit
+    outline: none
 .form-control:focus, .form-control:focus, .form-control:hover
-  outline: 0
-  box-shadow: none
-  border-color: $silver
+    outline: 0
+    box-shadow: none
+    border-color: $silver
 .btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus, button.active.focus, button.active:focus, button.focus, button:active.focus, button:active:focus, button:focus
-  outline: 0
-  box-shadow: none
+    outline: 0
+    box-shadow: none
 p
     word-break: break-all  
 .br-5
@@ -178,8 +178,8 @@ p
         margin-top: 5px
         width: 85%
     li>a:hover:after, li>a.active:after
-            transform: scaleX(1)
-            ransform-origin: 0 50%    
+        transform: scaleX(1)
+        ransform-origin: 0 50%
           
 form
     .input-group>.custom-select:not(:last-child), .input-group>.form-control:not(:last-child)
@@ -234,11 +234,12 @@ form
         color: $dark-blue
         svg
             color: $light-blue
+            
 input
-  &[type='number']
-    -moz-appearance: textfield
-  &::-webkit-outer-spin-button, &::-webkit-inner-spin-button
-    -webkit-appearance: none                         
+    &[type='number']
+        -moz-appearance: textfield
+    &::-webkit-outer-spin-button, &::-webkit-inner-spin-button
+        -webkit-appearance: none
 form.centered
     margin: 0 auto
     width: 50%
@@ -435,9 +436,9 @@ a.btn
 .btn-radius
     border-radius: .2rem !important 
 .box-layout
-   border: 1px solid $silver
-   border-radius: 5px
-   background-color: $white
+    border: 1px solid $silver
+    border-radius: 5px
+    background-color: $white
 .slider-box
     border: 1px solid $silver
     border-radius: 5px
@@ -445,25 +446,31 @@ a.btn
     max-width: 330px;
     margin-right: 20px; 
 .question-box-layout
-   border: 1px solid #2bc3cc
-   border-radius: 20px
-   background-color: #2bc3cc
+    border: 1px solid #2bc3cc
+    border-radius: 20px
+    background-color: #2bc3cc
 .categories-box-layout
-   border: 1px solid #2bc3cc
-   border-radius: 20px
-   height: 250px
+    border: 1px solid #2bc3cc
+    border-radius: 20px
+    height: 250px
 .initiative-categories-box-layout
-   border: 1px solid #2bc3cc
-   border-radius: 20px
-   min-height: 300px;
-   padding: 5px
+    border: 1px solid #2bc3cc
+    border-radius: 20px
+    min-height: 300px;
+    padding: 5px
+.certificate-box
+    background-image: url("/assets/images/frame.png")
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-origin: content-box;
 .home-categories-box-layout
     border: 3px solid #2bc3cc;
     border-radius: 30px;
     height: 250px;
     width: 200px;
 .slick-prev:before, .slick-next:before
-   color: $dark-blue
+    color: $dark-blue
 .slick-list > .slick-track 
     margin-right: 0    
 .ball-clip-rotate > div
@@ -487,7 +494,7 @@ a.btn
 .accordion__title:hover
     transition: background-color ease-out 0.3s
 .btn-width
-    width: 120px                  
+    width: 120px      
 @media only screen and (max-width: 767px)
     .btn-width
         width: unset
@@ -521,16 +528,16 @@ a.btn
         height: unset
         width: 100%                            
 .categories-group-layout
-   border: 1px solid #2bc3cc
-   border-radius: 20px
-   min-height: 140px
-   width: 100%
-   margin-bottom: 20px;
-   background-image: linear-gradient(to bottom, #79ccda, #8a9cd2)
-   h5, h6
-     text-align: center !important
-     margin-top: 20 !important
-     color: $white !important
+    border: 1px solid #2bc3cc
+    border-radius: 20px
+    min-height: 140px
+    width: 100%
+    margin-bottom: 20px;
+    background-image: linear-gradient(to bottom, #79ccda, #8a9cd2)
+    h5, h6
+        text-align: center !important
+        margin-top: 20 !important
+        color: $white !important
 .label-btn
     background-color: #4A3985;
     border: 1px solid #4A3985;
@@ -541,10 +548,10 @@ a.btn
         border: 1px solid $white
         color: $white
 .lecture-box-layout
-   border: 1px solid #2bc3cc
-   border-radius: 20px
-   height: 150px
-   margin-bottom: 40px;
+    border: 1px solid #2bc3cc
+    border-radius: 20px
+    height: 150px
+    margin-bottom: 40px;
 .share-label
     background-color: #FDE67B
     width: 35px;
@@ -558,21 +565,21 @@ a.btn
         height: 23px
         width: 100%
 .testimonials-title
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  text-align: center;
-  font-size: 40px;
-  padding-left: 45px;
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    font-size: 40px;
+    padding-left: 45px;
 
 .font-size-40
     font-size: 40px
 
 .center 
-  position: absolute;
-  bottom: 8px;
-  text-align: center;
-  font-size: 18px;
+    position: absolute;
+    bottom: 8px;
+    text-align: center;
+    font-size: 18px;
 
 .bottom-left 
     position: absolute;
