STUD-229 update initiative content

--- a/src/components/categories/styles.sass
+++ b/src/components/categories/styles.sass
@@ -97,9 +97,21 @@
     justify-content: center
     margin-left: -40px
     z-index: 10
+
+.zoom-circle
+    background-color: #fff
+    width: 56px
+    height: 56px
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16)
+    border-radius: 50px
+    display: inline-flex
+    align-items: center
+    justify-content: center
+    margin-left: -74px
+    z-index: 10
     img
         object-fit: contain
-        height: 23px
+        height: 38px
         width: 100%
 .number-circle
     background-color: #4a3985
@@ -229,4 +241,4 @@
     &.success
         background-color: #2bc3cc
     &.failure
-        background-color: #f66271  
+        background-color: #f66271
