--- a/src/index.sass
+++ b/src/index.sass
@@ -475,8 +475,13 @@ a.btn
 .initiative-categories-box-layout
     border: 1px solid #2bc3cc
     border-radius: 20px
-    min-height: 300px
+    min-height: 250px
     padding: 5px
+
+.general-box-layout
+    border: 3px solid #2bc3cc
+    border-radius: 20px
+    padding: 10px
 
 
 .certificate-box
@@ -564,6 +569,18 @@ a.btn
     margin-bottom: 20px
     background-image: linear-gradient(to bottom, #79ccda, #8a9cd2)
     h5, h6
+        text-align: center !important
+        margin-top: 20 !important
+        color: $white !important
+
+.initiative-main-title-layout
+    border: 1px solid #2bc3cc
+    border-radius: 70px
+    min-height: 140px
+    width: 100%
+    margin-bottom: 20px
+    background-image: linear-gradient(to bottom, #79ccda, #8a9cd2)
+    h5, h6, h3
         text-align: center !important
         margin-top: 20 !important
         color: $white !important
