--- a/src/components/categories/styles.sass
+++ b/src/components/categories/styles.sass
@@ -141,10 +141,10 @@
     color: #4a3985 !important
     border: 2px solid #4a3985
     border-radius: 20px
-    margin-right: 50px;
+    margin-right: 50px
 .label-model
     color: #4a3985 !important
-    margin-right: 50px;
+    margin-right: 50px
 .role-groups
     color: #343532 !important
     background-color: #f66271 
@@ -167,17 +167,17 @@
         height: 45px
         width: 100%
 .initiative-icon-circle
-    background-color: #fff;
-    width: 175px;
-    height: 175px;
-    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
-    border-radius: 100px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+    background-color: #fff
+    width: 170px
+    height: 170px
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16)
+    border-radius: 100px
+    display: inline-flex
+    align-items: center
+    justify-content: center
     img
         object-fit: contain
-        height: 85px
+        height: 100%
         width: 100%
 .question-card
     position: relative
