removed twillio, firebase chat implementation using firebase

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -14,7 +14,7 @@
   .card-body
     position: relative
     height: 40px
-    padding: 10px 15px 10px 15px 
+    padding: 10px 15px 10px 15px
     -webkit-transition: height 0.5s
     transition: height 0.5s
 
@@ -29,10 +29,10 @@
   background-color: transparent
   width: 0.8rem
   height: 0.8rem
-  top: 3px  
+  top: 3px
 .light-hr
   border-top: 1px solid #ddd6f2
- 
+
 .chat-collapse
   border: 1px solid #dfdfdf
   border-radius: 5px
@@ -58,8 +58,8 @@
       padding-bottom: 50px
       -ms-overflow-style: none
       scrollbar-width: none
-    .chat-box::-webkit-scrollbar 
-      display: none  
+    .chat-box::-webkit-scrollbar
+      display: none
 .chat-tabs
   li
     .nav-link
@@ -71,10 +71,10 @@
       background-color: #fbfbfb
       &.active
         background-color: #a9acb4
-        color: #FFF  
+        color: #FFF
     &:first-child
       border-top-left-radius: 0px
-      
+
 .speech-bubble
   background: #f7f7f7
   -webkit-border-radius: 4px
@@ -135,10 +135,10 @@
   margin-bottom: 10px
 .accordion-head:hover
   background-color: #6c53bf !important
-  transition: background-color ease-out 0.3s  
+  transition: background-color ease-out 0.3s
 .panel-accordion
   padding: 0px !important
-  margin-bottom: 15px  
+  margin-bottom: 15px
 
 .chat-window
   .chat-history
@@ -158,6 +158,10 @@
       border-radius: 7px
       width: 70%
       position: relative
+      .timestamp
+        position: absolute
+        left: 10px
+        bottom: 5px
     .my-message
       background: #9786d2
       border-bottom-right-radius: 0px
@@ -179,14 +183,14 @@
       .light-btn
         position: absolute
         top: 10px
-        left: 10px  
+        left: 10px
     .options
       position: absolute
       top: 14px
       right: 5px
       li
         width: 20px
-        margin-left: 10px
+        margin-left: 5px
         text-align: center
 
 .emoji-mart-scroll
@@ -194,7 +198,7 @@
   margin-bottom: 6px
   + .emoji-mart-bar
     display: none
-.emoji-mart-search 
+.emoji-mart-search
   display: none
 
 .chat-sidebar
@@ -208,7 +212,7 @@
 .recorded-video
   iframe
     width: 100%
-    height: 350px 
+    height: 350px
 .swal-text
   text-align: center
 .card-thumb
@@ -222,7 +226,7 @@
   height: 100% !important
 .visualizer
   display: none !important
-.ball-spin-fade-loader > div, 
+.ball-spin-fade-loader > div,
   background-color: #4b3a85 !important
 .ball-clip-rotate> div
   border: 2px solid #9786d2 !important
@@ -232,7 +236,7 @@
     border: 2px solid #2bc3cc !important
     border-bottom-color: transparent !important
     width: 15px !important
-    height: 15px !important    
+    height: 15px !important
 audio:focus
   outline: none
 
@@ -241,11 +245,11 @@ audio:focus
   top: 45%
   left: 48%
   color: #4b3a85
-  transform: rotate(90deg)      
+  transform: rotate(90deg)
 .pdf-wrapper
   background-color: #434343
   height: 60px
-  border-top-right-radius: .25rem!important                
+  border-top-right-radius: .25rem!important
   border-top-left-radius: .25rem!important
   padding-left: 20px
   padding-right: 20px
@@ -263,7 +267,7 @@ audio:focus
   position: relative
 .iframeWrapper
   overflow: auto
-  -webkit-overflow-scrolling: touch   
+  -webkit-overflow-scrolling: touch
 .col-height
   height: 350px
   overflow: auto
@@ -282,8 +286,8 @@ audio:focus
       opacity: 1
 .hint-badge
   position: absolute
-  top:  -10px
-  right: 30px          
+  top: -10px
+  right: 30px
 .tooltip-inner
   max-width: 220px
 
@@ -323,40 +327,40 @@ audio:focus
 .ball-beat
   display: flex
   align-items: center
-  justify-content: center  
-.ball-beat > div 
+  justify-content: center
+.ball-beat > div
   width: 10px !important
-  height: 10px !important 
-.dark-loader  
-  .ball-beat > div, .ball-spin-fade-loader > div 
+  height: 10px !important
+.dark-loader
+  .ball-beat > div, .ball-spin-fade-loader > div
     background-color: #4b3a85 !important
-.light-loader  
-  .ball-beat > div 
-    background-color: #2bc3cc !important        
-@media only screen and (max-width: 767px)                          
-    .responsive-margin
-      margin-top: 15px
- 
+.light-loader
+  .ball-beat > div
+    background-color: #2bc3cc !important
+@media only screen and (max-width: 767px)
+  .responsive-margin
+    margin-top: 15px
+
 .account-tabs
-    border-bottom: none
-    border-radius: 5px
-    border: none
+  border-bottom: none
+  border-radius: 5px
+  border: none
 .account-tabs .nav-item.show .nav-link, .account-tabs .nav-link.active, .account-tabs .nav-link.active:hover
-    color: #2bc3cc
-    background-color: white
-    font-size: 15px
-    border: 1px solid transparent
-    border-radius: 3px
+  color: #2bc3cc
+  background-color: white
+  font-size: 15px
+  border: 1px solid transparent
+  border-radius: 3px
 .account-tabs
-    .nav-item
-        width: calc(100% / 3)
-        text-align: center
-        font-family: GessLight
-        font-size: 15px
-        color: #a9acb4
-        cursor: pointer
-        background-color: #f2f2f2
-        border: 1px solid #dbdbdb
+  .nav-item
+    width: calc(100% / 3)
+    text-align: center
+    font-family: GessLight
+    font-size: 15px
+    color: #a9acb4
+    cursor: pointer
+    background-color: #f2f2f2
+    border: 1px solid #dbdbdb
     .nav-item:last-child
       border-top-left-radius: 5px
       border-bottom-left-radius: 5px
@@ -364,7 +368,7 @@ audio:focus
     .nav-item:first-child
       border-top-right-radius: 5px
       border-bottom-right-radius: 5px
-      border-left: none      
+      border-left: none
     .nav-link
       border-radius: 0px
       background-color: transparent
@@ -381,8 +385,8 @@ audio:focus
   .rect-progress-bar-percent
     display: none !important
   .inner-rect-bar
-    background-color: #2bc3cc !important  
+    background-color: #2bc3cc !important
 .encoded-text
   p, blockquote
-    margin-bottom: 0px   
-    word-break: normal 
+    margin-bottom: 0px
+    word-break: normal
