--- a/src/components/cart/checkout.styles.sass
+++ b/src/components/cart/checkout.styles.sass
@@ -85,6 +85,11 @@ $off-white: #fefefe
     position: absolute
     top: 5px
     right: 25px
+.mada-img
+    text-align: center;
+    margin-block-start: -9%;
+    margin-block-end: -3%;    
 @media only screen and (max-width: 767px)
     .custom-tabs
-        width: 100% !important         
+        width: 100% !important    
+             
