--- a/src/components/cart/checkout.styles.sass
+++ b/src/components/cart/checkout.styles.sass
@@ -89,6 +89,9 @@ $off-white: #fefefe
     text-align: center;
     margin-block-start: -9%;
     margin-block-end: -3%;    
+    padding: 1%;
+.padding-img
+    margin-inline-end: 2%;
 @media only screen and (max-width: 767px)
     .custom-tabs
         width: 100% !important    
