fix design issues

--- a/src/components/categories/styles.sass
+++ b/src/components/categories/styles.sass
@@ -213,16 +213,16 @@
         bottom: 0
     .answers-ratio
         background-color: #f4fcfd
-        height: 70px
-        padding: 10px 15px 10px 15px
+        //height: 70px
+        //padding: 10px 15px 10px 15px
         border-radius: 5px
         width: 60%
-        position: absolute
-        left: 0
-        right: 0
-        margin-left: auto
-        margin-right: auto
-        bottom: -30px
+        //position: absolute
+        //left: 0
+        //right: 0
+        //margin-left: auto
+        //margin-right: auto
+        //bottom: -30px
 .react-sweet-progress-symbol
     padding-right: 5px
     padding-left: 0px
