--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,9 +1,9 @@
 /* Start The Main Reset Style */
 body, html {
   direction: rtl;
-  height: 100%;
   width: 100%;
   height: 100%;
+  scroll-behavior: smooth;
 }
 :root {
   /* #4A3985 */
@@ -12,147 +12,27 @@ body, html {
   --main-color-rgba: rgba(75,58,133, .8);
   --card-color: #A8EBEF;
   --color-yellow: #FCE77D;
+  --color-tomato: #ff6575;
+  --color-green: #6bd17f;
+  --border-light: #a8ebef
 }
-* {
-  box-sizing: border-box;
+* {box-sizing: border-box;}
+::selection {
+  background-color: var(--main-color);
+  color: #FFF
 }
-button:focus {
-  outline: none !important;
-  outline: none !important;
+button:focus {outline: none !important;}
+.with-fixed-header {
+  padding-top: 70px;
 }
+
 /* End The Main Reset Style */
 
 /* _____________________________________________________ */
 /* _____________________________________________________ */
 
 /* Start Some Main Helper Classess */
-.bg-white { background-color: #FFF !important}
-.main-color { color: var(--main-color) !important }
-.card-bg-color { background-color: var(--card-color) }
-.color-yellow {color: var(--color-yellow)}
 
-.border-radius { border-radius: 100px; }
-.bordered {border: 1px solid var(--main-color)}
-
-.font-size-14 {font-size: 14px;}
-.text-shadow {text-shadow: 0 3px rgba(0,0,0, .3)}
-.title-shadow-purple { text-shadow: 0 0 3px rgb(75 58 133 / 50%)}
-.description-card {font-size: 18px}
-
-.overflow-x-hidden {overflow-x: hidden;}
-.overflow-y-hidden {overflow-y: hidden;}
-.overflow-hidden {overflow: hidden;}
-
-.link-hover {transition: all .2s ease-in-out}
-.link-hover:hover {color: var(--sub-color) !important}
-
-.social-hover {transition: all .2s ease-in-out;}
-.social-hover:hover {transform: scale(1.2)}
-
-.cursor-pointer { cursor: pointer !important}
-
-.overlay-bg {position: relative}
-.overlay-bg:after {
-  content: '';
-  width: 100%;
-  height: 100%;
-  background-color: var(--main-color-rgba);
-  position: absolute;
-  top: 0; left: 0;
-  z-index: 1
-}
-
-.line-yellow {position: relative; display: inline-block;}
-.line-yellow:after {
-  content: '';
-  position: absolute; 
-  top: 60%; left: 0;
-  z-index: -1;
-  width: 100%;
-  height: 10px;
-  background-color: var(--color-yellow)
-}
-
-/* Buttons of Cards */
-.btn-card {
-  display: block;
-  min-width: 130px;
-  text-align: center;
-  background-color: var(--main-color);
-  color: #FFF !important;
-  border-radius: 50px;
-  padding-left: 15px;
-  padding-right: 15px;
-  font-size: .8rem;
-  height: 30px;
-  line-height: 30px;
-  font-weight: bold;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  cursor: pointer
-}
-.btn-card:hover {
-  background-color: #FFF;
-  color: var(--main-color) !important;
-}
-/* Buttons of Card Outline */
-.btn-card-outline {
-  display: block;
-  width: 200px;
-  text-align: center;
-  background-color: transparent;
-  color: var(--main-color) !important;
-  border: 1px solid var(--main-color);
-  border-radius: 50px;
-  padding-left: 15px;
-  padding-right: 15px;
-  font-size: .8rem;
-  height: 30px;
-  line-height: 30px;
-  font-weight: bold;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  cursor: pointer
-}
-.btn-card-outline:hover {
-  background-color: var(--main-color);
-  color: #FFF !important
-}
-/* Buttons of Yellow Color */
-.btn-yellow {
-  display: block;
-  width: 200px;
-  text-align: center;
-  background-color: var(--color-yellow);
-  color: var(--main-color) !important;
-  border: 1px solid transparent;
-  border-radius: 50px;
-  padding-left: 15px;
-  padding-right: 15px;
-  font-size: .8rem;
-  height: 30px;
-  line-height: 30px;
-  font-weight: bold;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  cursor: pointer
-}
-.btn-yellow:hover {
-  background-color: var(--main-color);
-  color: #FFF !important
-}
-.min-height-630 {min-height: 630px;}
-.min-height-380 {min-height: 380px;}
-.min-height-400 {min-height: 400px;}
 .w-20 {width:20%}
 .w-25 {width:25%}
 .w-30 {width:30%}
@@ -170,16 +50,12 @@ button:focus {
 .width-100 {width: 100px;}
 .width-130 {width: 130px;}
 .width-150 {width: 150px;}
-.max-height-380 {max-height: 400px;}
+
 .max-height-100 {max-height: 100px;}
 .max-height-80 {max-height: 80px;}
 .max-height-50 {max-height: 50px;}
 
 .min-width-200 {min-width: 200px}
-.max-width-200 {max-width: 200px}
-
-.min-height-150 {min-height: 150px}
-.max-height-150 {max-height: 150px}
 
 .mt--50 {margin-top: -50px;}
 
@@ -537,12 +413,22 @@ button:focus {
   }
 }
 
+
+
 /* End Some MainHelper Classess */
 
 /* _____________________________________________________ */
 /* _____________________________________________________ */
 
+/* Start Style of Breadcrumb */
+.breadcrumb-item a {
+  color: #333 
+}
+.breadcrumb-item.active {
+  color: var(--sub-color)
+}
 /* Start The Navbar Style */
+.fixed-top {transition: all .8s ease-in-out}
 .navbar .navbar-brand {cursor: pointer}
 .navbar .navbar-nav .nav-item .nav-link {
   cursor: pointer;
@@ -554,10 +440,26 @@ button:focus {
   -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
+.logo-img {transition: all .5s ease-in-out}
+
 .navbar .navbar-nav .nav-item .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
   color: var(--sub-color) !important
 }
+
+.progressbar-wrapper {
+  position: fixed;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 5px; 
+}
+.progressbar-wrapper .progressbar-line {
+  width: 0;
+  height: 100%; 
+  background-color: var(--main-color);
+}
+
 /* End The Navbar Style */
 
 /* _____________________________________________________ */
@@ -567,43 +469,74 @@ button:focus {
 .main-banner {
   position: relative;
 }
+.banner-image {
+  height: 500px;
+  background-image: url(https://images.unsplash.com/photo-1432888498266-38ffec3eaf0a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=753&q=80);
+}
 .main-banner .banner-info,
 .about-wrapper {
   width: 100%;
+  height: 100%;
   color: #FFF;
   position: relative;
   z-index: 2;
   text-align: center;
-  min-height: 500px;
-  background-image: url(https://images.unsplash.com/photo-1432888498266-38ffec3eaf0a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=753&q=80);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
 }
 .about-wrapper {padding: 40px 0 20px; background-attachment: fixed;}
+.about-wrapper-image {
+  min-height: 500px;
+  background-image: url('../images/banner-about.svg');
+}
 
 .main-banner .banner-info .banner-text {
   position: relative;
   z-index: 2;
-  top: -90px;
+  transform: translateY(-50px);
 }
-.banner-cards .card-pos {
-  transform: translateY(-150px);
+.banner-cards {
   position: relative;
-  z-index: 10;
+  z-index: 2;
+  top: -170px;
+  perspective-origin: bottom;
+  perspective: 2000px;
+  transform-style: preserve-3d;
 }
-.banner-cards .card-pos:nth-of-type(2) {transform: translateY(-200px);}
 .banner-cards .card {
+  min-height: 270px;
   padding: 0 0 20px;
-  border-radius: 10px;
+  border-radius: 20px;
   border: 0;
   margin-bottom: 30px;
-  box-shadow: 0px 0px 20px -5px rgb(0 0 0 / 20%);
-  transition: all .3s ease-in-out;
+  box-shadow: 0 2px 14px 0 rgba(129, 108, 200, 0.63);
+  /* background-image: linear-gradient(to bottom, #FFF 37%, #FFF 146%); */
+  position: relative;
+  transform: translateY(30px) translateZ(0);
+  transition: all .5s ease-in-out;
 }
-.banner-cards .card:hover {
+.banner-cards .card:hover {transform: translateY(0) translateZ(80px)}
+/* .banner-cards .translated-card:nth-of-type(2) {transform: translateY(0)} */
+.banner-cards .card .card-items {position: relative; z-index: 3;}
+.banner-cards .card:before {
+  position: absolute;
+  content: "";
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border-radius: 17px;
+  background-image: linear-gradient(to bottom, #816cc8 37%, #2bc3cc 146%);;
+  z-index: 1;
+  transition: opacity .3s ease-in-out;
+  opacity: 0;
+}
+.banner-cards .card:hover:before {
+  opacity: 1;
+}
+/* .banner-cards .card:hover {
   background-image: linear-gradient(180deg,#79ccda,#8a9cd2);
-}
+  background-image: linear-gradient(to bottom, #816cc8 37%, #2bc3cc 146%);
+  background-image: linear-gradient(to right top, #816cc8, #4b88de, #00a0e2, #00b3db, #2bc3cc);
+} */
 .banner-cards .title-card {
   position: relative;
 }
@@ -619,16 +552,12 @@ button:focus {
   line-height: 1.6em;
   margin: 30px 0 20px;
   z-index: 10;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
 }
 .banner-cards .card:hover .title-card h3 {
   background-color: #FFF;
   color: var(--main-color)
 }
+.banner-cards .card:hover .text-card h5 {color: #FFF;}
 .banner-cards .title-card h3:before,
 .banner-cards .title-card h3:after {
   content: ' ';
@@ -666,31 +595,65 @@ button:focus {
 /* _____________________________________________________ */
 /* _____________________________________________________ */
 
-/* Start The Hemma Interviews */
-.free-card {
-  transition: all .2s ease-in-out; 
-  border: 1px solid transparent;
-  border-radius: 100px;
-}
-.free-card:hover {border-color: var(--main-color)}
-.free-interview {
-  transform: translateY(-100px)
-}
-/* End The Hemma Interviews */
+/* Start The Hemma Free Interviews */
+.free-interview {transform: translateY(-40px)}
+.free-card {border-radius: 100px;}
+/* End The Hemma Free Interviews */
 
 /* _____________________________________________________ */
 /* _____________________________________________________ */
 
 /* Start About Me Hemma Style */
 .about-hemma {position: relative; z-index: 10}
+.about-head-wrapper {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 55px 0;
+}
+.about-head-wrapper img {
+  max-width: 100%;
+  height: 100px;
+}
+
+.about-head-wrapper img.height-img {height: 150px ;}
 /* End About Me Hemma Style */
 
 /* _____________________________________________________ */
 /* _____________________________________________________ */
 
+/* Satrt More About Hemma */
+.details-icon {
+  width: 100px;
+  height: 100px;
+  margin: auto
+}
+.details-icon img {
+  display: block;
+  margin: auto;
+  max-width: 100%;
+  height: 100px;
+}
+.text-effect {
+  -webkit-text-stroke-width: 1px;
+  -moz-text-stroke-width: 1px;
+  -ms-text-stroke-width: 1px;
+  -o-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #333;
+  -moz-text-stroke-color: #333;
+  -ms-text-stroke-color: #333;
+  -o-text-stroke-color: #333;
+  color: transparent;
+  text-shadow: 2px -3px #fff;
+  font-size: 40px;
+}
+
+/* End More About Hemma */
+
 /* Start Success Hemma Style */
 .sider-items {
-  border: 4px solid var(--main-color);
+  border: 4px solid var(--sub-color);
   padding: 10px 30px;
   border-radius: 20px;
   position: relative;
@@ -701,7 +664,7 @@ button:focus {
   left: 20px;
   z-index: 10;
   padding: 0 3px;
-  color: var(--main-color);
+  color: var(--sub-color);
   background: #FFF;
 }
 .glide__bullets {
@@ -724,7 +687,212 @@ button:focus {
 li.glide__slide.glide__slide--active {
   opacity: 1;
 }
+li.glide__slide.glide__slide--active .sider-items {border-color: var(--main-color)}
+li.glide__slide.glide__slide--active .sider-items .quote-icon {color: var(--main-color)}
+.glide__arrow {
+  color: #4a3985;
+  background-color: #FFF;
+}
+.glide__arrow:hover {
+  border-color: #4a3985;
+}
 /* End Success Hemma Style */
+
+/* Strat style of Groups */
+
+/* Groupe One */
+.correct-text {
+  min-width: 92px;
+}
+
+.result-loading {
+  width: 100%;
+  height: 15px;
+  margin: 0 3px;
+  background: #6bd17f;
+  border-radius: 50px;
+  display: flex;
+  justify-content: flex-end;
+}
+.loading-line {
+  height: 15px;
+  background: #ececec;
+  border-radius: 5px 10px 10px 5px;
+}
+
+.comment-wrapper {
+  padding: 30px;
+  background-color: #f6fdfe;
+  border-radius: 30px;
+}
+.comment-wrapper textarea {
+  border-radius: 30px;
+  resize: unset;
+  padding: 25px;
+}
+.graph-char {
+  background: #ff6575;
+  color: #FFF;
+  text-align: center;
+  border-radius: 50%;
+  width: 40px;
+  min-width: 40px;
+  height: 40px;
+  min-height: 40px;
+  line-height: 40px;
+  font-weight: bold;
+  font-size: 20px;
+  transition: all .3s ease-in-out;
+}
+.graph-char:hover,
+.graph-char.active {
+  background-color: #6bd17f
+}
+.graph-progress {
+  width: 100%;
+  height: 20px;
+  background: #e5e5e5;
+  border-radius: 50px;
+  margin: 0 10px;
+  overflow: hidden;
+}
+.graph-progress-fill {
+  width: 100%;
+  height: 100%;
+  background-color: #ff6575
+}
+.graph-percentage {
+  min-width: 40px;
+  text-align: center;
+}
+#myResultChart {
+  width: 100% !important;
+  height: auto;
+  max-height: 270px;
+}
+/* End style of Groups */
+
+/* _____________________________________________________ */
+/* _____________________________________________________ */
+
+/* Start Style Of Licences Pages */
+.btn-title {
+  display: block;
+  min-width: 130px;
+  text-align: center;
+  background-color: var(--sub-color);
+  color: var(--main-color) !important;
+  border-radius: 50px;
+  border: 1px solid transparent;
+  padding-left: 15px;
+  padding-right: 15px;
+  font-size: .8rem;
+  height: 30px;
+  line-height: 30px;
+  font-weight: bold;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+.btn-title:hover {
+  background-color: var(--main-color);
+  color: var(--sub-color) !important;
+}
+
+.lic-title {
+  margin-left: 30px;
+}
+
+.tab-img {
+  border: 1px solid var(--main-color);
+  border-radius: 25px;
+  width: 80px;
+  height: 80px;
+  line-height: 80px;
+  text-align: center;
+  margin: auto;
+}
+
+.tab-items.active .tab-img {
+  background-color: var(--main-color)
+}
+.card-ele {
+  border-radius: 32px;
+  box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.1);
+  margin: 0px 0 30px;
+  transition: all .2s ease-in-out
+}
+.card-ele:hover {
+  background: var(--main-color);
+  color: #FFF;
+}
+.card-ele:hover .main-color {color: #FFF !important}
+.card-ele:hover .sub-color {color: #FFF !important}
+.card-img {position: relative; top: -80px;}
+img[alt="Human"] {
+  max-height: 200px;
+}
+.img-tag {
+  position: absolute;
+  bottom: -15px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: var(--sub-color);
+  color: #FFF;
+  padding: 5px 20px;
+  border-radius: 50px;
+}
+.input-area {
+  position: relative;
+}
+.input-area input[type="text"]::placeholder {color: #c6c8ca}
+.input-area .input-close {
+  position: absolute;
+  top: 50%; left: 10px;
+  transform: translateY(-50%);
+  color: #c6c8ca
+}
+.btn-card-area {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%)
+}
+.card-gradient {
+  background-image: linear-gradient(to bottom, #79ccda, #8a9cd2);
+  border: 0
+}
+.search-btn.cursor-pointer {
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  transform: translateY(-50%);
+  color: #c6c8ca;
+}
+.gray-tag {
+  background: #f6f6f6;
+  border-radius: 50px;
+  color: #d4d4d4;
+  font-weight: bold;
+  text-align: center;
+  max-width: 155px;
+  margin-bottom: 10px;
+  padding: 5px 20px;
+  cursor: pointer
+}
+.price-tag {
+  max-width: 155px;
+  background: var(--sub-color);
+  color: #FFF;
+  padding: 5px 20px;
+  border-radius: 50px;
+  text-align: center;
+  cursor: pointer
+}
+/* End Style Of Licences Pages */
 
 /* _____________________________________________________ */
 /* _____________________________________________________ */
@@ -740,18 +908,33 @@ li.glide__slide.glide__slide--active {
     width: 150px;
     margin: auto
   }
+  .card-ele {height: 700px !important}
+  .width-small {
+    min-width: 150px !important;
+    font-size: 16px;
+  }
+}
+@media (max-width: 767px) {
+  .flex-column-small {flex-direction: column;}
+  .lic-title {
+    margin-left: 0;
+    margin-bottom: 20px;
+  }
+  .card-ele {height: 700px !important}
+  .width-small {
+    min-width: 150px !important;
+    font-size: 16px;
+  }
 }
 @media(max-width: 992px) {
-  .free-card {border-radius: 10px}
-  .banner-cards .card-pos {
-    transform: translateY(0);
+  .navbar .navbar-nav .nav-item .nav-link {
+    margin-bottom: 10px;
   }
-  .banner-cards .card-pos:nth-of-type(2) {transform: translateY(0);}
-  .container-pos {
-    transform: translateY(-190px);
-    position: relative;
-    z-index: 20;
-  }
+  .navbar-collapse {padding-top: 20px;}
+  .free-card {border-radius: 10px !important}
+  .banner-cards .translated-card {transform: translateY(0)}
+  .banner-cards .translated-card:nth-of-type(2) {transform: translateY(0)}
+  
   .banner-cards .card {
     width: 95%;
     margin-left: auto;
@@ -763,5 +946,7 @@ li.glide__slide.glide__slide--active {
   .hemma-links {text-align: center; margin-bottom: 20px}
   .hemma-socials, .hemma-phone {justify-content: center !important}
   .hemma-msg {margin-right: 0 !important}
+  
+  .result-loading {width: 65%; margin: 0 10px}
 }
 /* End Media Quary */
