--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -240,7 +240,7 @@ a:hover {
   padding-left: 15px;
   padding-right: 15px;
   font-size: .8rem;
-  height: 30px;
+  /* height: 30px; */
   line-height: 30px;
   font-weight: bold;
   -webkit-transition: all 0.3s ease-in-out;
@@ -272,7 +272,7 @@ a:hover {
   padding-left: 15px;
   padding-right: 15px;
   font-size: .8rem;
-  height: 30px;
+  /* height: 30px; */
   line-height: 30px;
   font-weight: bold;
   -webkit-transition: all 0.3s ease-in-out;
