--- a/src/components/shared/bookletCard/styles.sass
+++ b/src/components/shared/bookletCard/styles.sass
@@ -16,7 +16,6 @@
   -webkit-transition: height 0.5s
   transition: height 0.5s
   img
-    width: 40%
     display: block
     opacity: 1
     -webkit-transform: scale(1)
@@ -25,8 +24,8 @@
     transition: opacity 0.5s, -webkit-transform 0.5s
     transition: opacity 0.5s, transform 0.5s
     transition: opacity 0.5s, transform 0.5s, -webkit-transform 0.5s
-    height: 180px
     object-fit: cover
+    max-width: 100%
 
 .course-card:hover .card-thumb
   height: 130px
